--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ APP_URL=http://laravel-qr
 
 LOG_CHANNEL=stack
 
+URL_API_GO = https://api.sentralsari.com/
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.2
 DB_PORT=3306
